# Dormitory-Automation-System

./: README.md
pyProject/: arayuz.py  bina_duzenle_penceresi.py  bina_ekle_penceresi.py  binalarim_penceresi.py  daire_duzenle_penceresi.py  kayit_penceresi.py  kullanici_paneli.py  main.py  oda_durumu_goruntule.py  oda_durumu_penceresi.py  odeme_duzenle_penceresi.py  odeme_ekrani.py  ogrenci_ekle_penceresi.py  ogrenci_ekle_sema.py  pyproject.toml  veritabani.db  veritabani.py
